--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="ISO-8859-1">
 <title>Index Page</title>
 </head>
 <body>
 <h1 style="text-align: center">Welcome to online ticket booking application</h1>
-<form method="POST" action="loginform.html" style="text-align: center;">
-<input type="submit" value="ENTER">
+<h4  style="border-color: maroon; text-align: center"><a href="desk.html">Enter</a></h4>
 </form>
 </body>
 </html>
