--- a/WebContent/loginform.html
+++ b/WebContent/loginform.html
@@ -2,14 +2,25 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>Login Form</title>
 </head>
 <body>
 <h1 style="text-align: center">Login</h1>
-<form action="LoginServlet" style="padding: 20px; text-align: center;">
-	<h4>Username:<h4> <input type="text" name="username"><br>
-	<h4>Password:<h4> <input type="password" name="password"><br>
-			  <br><input type="submit" value="LOGIN">
+<form action="LoginServlet" method="post" style="padding: 20px; text-align: center;">
+	<table>
+	<tr>
+	<td><h4>Username:</td>
+	<td></h4> <input type="text" name="username"></td>
+	</tr>
+	<tr>
+	<td><h4>Password:</h4> </td>
+	<td><input type="password" name="password"></td>
+	</tr>
+	<tr>
+	<td colspan="2" style="text-align: center"><br><input type="submit" value="LOGIN" ></td>
+	</tr>
+	</table>
 </form>
 </body>
 </html>
